tests/rename/should_fail/T12146.hs
-- Test #12146

module T12146 where

ipmort Data.Char
